fix preventing contextMenu when dragging on firefox

--- a/src/app/components/construction-box-category/construction-box-category.component.scss
+++ b/src/app/components/construction-box-category/construction-box-category.component.scss
@@ -32,9 +32,9 @@
 
 	.content {
 		display: grid;
-		grid-gap: 0.5rem;
+		grid-gap: 0.7rem;
 		grid-template-columns: 1fr 1fr 1fr;
-		padding: 0.5rem;
+		padding: 0.7rem;
 		user-select: none;
 		border-bottom-left-radius: border('radius');
 		border-bottom-right-radius: border('radius');
